Enabled SSE2 for everything in x86 build Removed some options in xr_3da.vcxproj

--- a/Externals/LuaJIT-proj/BuildVm.vcxproj
+++ b/Externals/LuaJIT-proj/BuildVm.vcxproj
@@ -47,6 +47,7 @@
     <ClCompile>
       <AdditionalIncludeDirectories>$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <EnableEnhancedInstructionSet Condition="'$(Platform)'=='Win32'">StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <PostBuildEvent>
       <Command>$(OutDir)$(TargetName) -m peobj -o lj_vm_$(PlatformShortName).obj
