--- a/Externals/LuaJIT-proj/LuaJIT.vcxproj
+++ b/Externals/LuaJIT-proj/LuaJIT.vcxproj
@@ -52,6 +52,7 @@
     <ClCompile>
       <PreprocessorDefinitions>LUA_BUILD_AS_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <EnableEnhancedInstructionSet Condition="'$(Platform)'=='Win32'">StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
