use system crypto++ instead of compiling from source code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,10 @@ set(LUA_INCLUDE_DIR Externals/LuaJIT/src)
 
 set(LUA_FOUND 1)
 if (NOT WIN32)
+if(EXISTS ${CMAKE_SOURCE_DIR}/Externals/cryptopp/dsa.h)
+    file(REMOVE_RECURSE ${CMAKE_SOURCE_DIR}/Externals/cryptopp)
+    file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/Externals/cryptopp)
+endif()
 find_package(FreeImage REQUIRED)
 find_package(LockFile REQUIRED)
 find_package(OpenAL REQUIRED)
