--- a/src/xrGame/CMakeLists.txt
+++ b/src/xrGame/CMakeLists.txt
@@ -40,7 +40,10 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${CMAKE_CURRENT_SOURCE_DIR}/../xrServerEntities
     ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/GameSpy/src
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/luabind
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/ode/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/OpenAutomate/inc
     ${SDL_INCLUDE_DIRS}
     )
 
