--- a/src/xrGame/CMakeLists.txt
+++ b/src/xrGame/CMakeLists.txt
@@ -40,6 +40,7 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${CMAKE_CURRENT_SOURCE_DIR}/../xrServerEntities
     ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/cximage
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/GameSpy/src
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/luabind
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Externals/ode/include
