--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ add_subdirectory(xrAICore)
 add_subdirectory(xrCDB)
 add_subdirectory(xrCore)
 add_subdirectory(xrEngine)
-#add_subdirectory(xrGame)
+add_subdirectory(xrGame)
 #add_subdirectory(xrNetServer)
 add_subdirectory(xrParticles)
 add_subdirectory(xrPhysics)
