CMake: now compile cximage with -fPIC

--- a/Externals/cximage/CMakeLists.txt
+++ b/Externals/cximage/CMakeLists.txt
@@ -40,3 +40,5 @@ add_library(cximage STATIC ${SOURCES} ${HEADERS})
 
 set_target_properties(cximage PROPERTIES PREFIX "")
 target_link_libraries(cximage)
+set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
+
