--- a/src/utils/xrMiscMath/CMakeLists.txt
+++ b/src/utils/xrMiscMath/CMakeLists.txt
@@ -17,3 +17,6 @@ include_directories(
 
 add_library(${PROJECT_NAME} STATIC ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__INCLUDES})
 set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
+
+set_target_properties(${PROJECT_NAME} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "pch.hpp")
+cotire(${PROJECT_NAME})
