--- a/src/xrParticles/CMakeLists.txt
+++ b/src/xrParticles/CMakeLists.txt
@@ -18,5 +18,8 @@ include_directories(
 add_definitions(-DXR_PARTICLES_EXPORTS)
 add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__INCLUDES})
 
+set_target_properties(${PROJECT_NAME} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "stdafx.h")
+cotire(${PROJECT_NAME})
+
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 target_link_libraries(${PROJECT_NAME} xrCore xrMiscMath)
