message "CMake build .." now include C/C++ build flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ elseif(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
     set(LUA_LIBRARIES luajit-debug)
 endif()
 
-message("CMake build ${CMAKE_BUILD_TYPE}")
+message("CMake build ${CMAKE_BUILD_TYPE}, CFLAGS=${CMAKE_C_FLAGS}, CXXFLAGS=${CMAKE_CXX_FLAGS}")
 
 add_definitions(-D_MT -D_CPPUNWIND -DPURE_DYNAMIC_CAST -DDECLARE_SPECIALIZATION -DM_NOSTDCONTAINERS_EXT -DUSE_OGL)
 
