Avoid conflicting definitions with cximage and add include folder
When DEBUG is on, ximajpg imports some xrCore headers.

--- a/Externals/cximage/CMakeLists.txt
+++ b/Externals/cximage/CMakeLists.txt
@@ -34,6 +34,7 @@ add_definitions(-DCXIMAGE_BUILD)
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../src
     )
 
 add_library(cximage STATIC ${SOURCES} ${HEADERS})
