* Torch/NightVision => Night Vision is now completely detached from
CTorch, allowing the ability to use NightVision without having torch in slot. This allows the possibility for device_torch to be unequipped or possibility to have multiple torch items. Night Vision is now part of CActor, night vision active state is now tracked on m_trader_flags in CInventoryOwner.

Torch => Can now define light offset in it's item section and other properties in it's model userdata ltx

CSE_ALifeTraderAbstract/InventoryOwner => Added GE_TRADER_FLAGS server message to allow possibility to persist data through saves using the mostly unused m_trader_flags!

commit https://github.com/revolucas/CoC-Xray/commit/355043a89c5a604cea241b7d7ef5da6015d2fa37

--- a/src/xrGame/xrGame.vcxproj
+++ b/src/xrGame/xrGame.vcxproj
@@ -324,6 +324,7 @@
     <ClInclude Include="ActorCondition.h" />
     <ClInclude Include="ActorEffector.h" />
     <ClInclude Include="ActorHelmet.h" />
+    <ClInclude Include="ActorNightVision.h" />
     <ClInclude Include="actor_anim_defs.h" />
     <ClInclude Include="actor_defs.h" />
     <ClInclude Include="Actor_Flags.h" />
@@ -1885,6 +1886,7 @@
     <ClCompile Include="ActorHelmet.cpp" />
     <ClCompile Include="ActorInput.cpp" />
     <ClCompile Include="ActorMountedWeapon.cpp" />
+    <ClCompile Include="ActorNightVision.cpp" />
     <ClCompile Include="ActorVehicle.cpp" />
     <ClCompile Include="actor_communication.cpp">
       <PrecompiledHeaderFile>pch_script.h</PrecompiledHeaderFile>
