--- a/src/Layers/xrRenderPC_GL/CMakeLists.txt
+++ b/src/Layers/xrRenderPC_GL/CMakeLists.txt
@@ -12,6 +12,7 @@ add_dir("${DIRS}")
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/../..
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../Externals/luabind
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../Externals/gli
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../sdk/include
     ${SDL_INCLUDE_DIRS}
     )
