Shaders compilation code moved to separate files.

--- a/src/Layers/xrRenderPC_GL/xrRender_GL.vcxproj
+++ b/src/Layers/xrRenderPC_GL/xrRender_GL.vcxproj
@@ -310,6 +310,7 @@
     <ClCompile Include="r3_R_rain.cpp" />
     <ClCompile Include="r3_R_sun_support.cpp" />
     <ClCompile Include="rgl.cpp" />
+    <ClCompile Include="rgl_shaders.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
