--- a/src/Layers/xrRenderPC_R1/xrRender_R1.vcxproj
+++ b/src/Layers/xrRenderPC_R1/xrRender_R1.vcxproj
@@ -428,6 +428,7 @@
     <ClCompile Include="FStaticRender_DetectSector.cpp" />
     <ClCompile Include="FStaticRender_Loader.cpp" />
     <ClCompile Include="FStaticRender_RenderTarget.cpp" />
+    <ClCompile Include="FStaticRender_Shaders.cpp" />
     <ClCompile Include="GlowManager.cpp" />
     <ClCompile Include="LightPPA.cpp" />
     <ClCompile Include="LightProjector.cpp" />
