xrRender_GL: now dll is loaded without error on linux

--- a/src/Layers/xrRenderPC_GL/CMakeLists.txt
+++ b/src/Layers/xrRenderPC_GL/CMakeLists.txt
@@ -5,6 +5,8 @@ list(APPEND DIRS
     "../xrRender"
     "../xrRender/blenders"
     "../xrRenderGL"
+    "../xrRenderGL/MSAA"
+    "../xrRenderGL/GL Rain"
     "../../Include/xrRender"
     )
 
