--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ lib/
 *.aps
 *.user
 *.PVS-Studio.*
+res/gamedata_COC/.gitattributes
+res/gamedata_COC/.gitignore
+res/gamedata_COC/changelog_legend.txt
