Add xrUICore to cmake and fix builds

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(Layers)
 add_subdirectory(xr_3da)
 #add_subdirectory(xrMisc)
 add_subdirectory(xrAICore)
+add_subdirectory(xrUICore)
 add_subdirectory(xrCDB)
 add_subdirectory(xrCore)
 add_subdirectory(xrEngine)
