--- a/src/xrPhysics/CMakeLists.txt
+++ b/src/xrPhysics/CMakeLists.txt
@@ -29,3 +29,5 @@ cotire(${PROJECT_NAME})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 target_link_libraries(${PROJECT_NAME} xrCore xrMiscMath ODE xrScriptEngine xrAPI xrCDB xrSound)
+xr_install(${PROJECT_NAME})
+
