--- a/src/xrScriptEngine/CMakeLists.txt
+++ b/src/xrScriptEngine/CMakeLists.txt
@@ -21,3 +21,5 @@ cotire(${PROJECT_NAME})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 target_link_libraries(${PROJECT_NAME} xrAPI xrCore luabind ${LUA_LIBRARIES})
+xr_install(${PROJECT_NAME})
+
