--- a/src/Layers/xrRenderPC_GL/CMakeLists.txt
+++ b/src/Layers/xrRenderPC_GL/CMakeLists.txt
@@ -44,3 +44,5 @@ add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 target_link_libraries(${PROJECT_NAME} xrCore xrCDB xrEngine xrParticles xrScriptEngine xrAPI GLEW luabind ${LUA_LIBRARIES})
+xr_install(${PROJECT_NAME})
+
