--- a/src/Layers/xrRenderPC_R1/CMakeLists.txt
+++ b/src/Layers/xrRenderPC_R1/CMakeLists.txt
@@ -22,3 +22,5 @@ add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 target_link_libraries(${PROJECT_NAME} xrCore luabind LuaJIT xrCDB xrEngine xrParticles xrScriptEngine xrAPI xrMiscMath  ${SDL_LIBRARIES})
+xr_install(${PROJECT_NAME})
+
