--- a/src/xrAICore/CMakeLists.txt
+++ b/src/xrAICore/CMakeLists.txt
@@ -31,3 +31,4 @@ cotire(${PROJECT_NAME})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 target_link_libraries(${PROJECT_NAME} xrCore xrMiscMath xrAPI xrScriptEngine luabind ${LUA_LIBRARIES})
+xr_install(${PROJECT_NAME})
