--- a/src/xrNetServer/CMakeLists.txt
+++ b/src/xrNetServer/CMakeLists.txt
@@ -19,3 +19,4 @@ add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 target_link_libraries(${PROJECT_NAME} xrCore)
+xr_install(${PROJECT_NAME})
