--- a/src/xrParticles/CMakeLists.txt
+++ b/src/xrParticles/CMakeLists.txt
@@ -23,3 +23,5 @@ cotire(${PROJECT_NAME})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 target_link_libraries(${PROJECT_NAME} xrCore xrMiscMath)
+xr_install(${PROJECT_NAME})
+
