--- a/src/xr_3da/CMakeLists.txt
+++ b/src/xr_3da/CMakeLists.txt
@@ -19,3 +19,4 @@ add_executable(${PROJECT_NAME} ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__IN
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 target_link_libraries(${PROJECT_NAME} xrCore xrAPI xrEngine)
+xr_install(${PROJECT_NAME})
